Bug 66423 - [bisected] postprocess/pp_run.c :56:pp_run: Assertion ppq->tmp[1] failed
Summary: [bisected] postprocess/pp_run.c :56:pp_run: Assertion ppq->tmp[1] failed
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: All All
: medium normal
Assignee: Matthew McClure
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-01 00:06 UTC by Alexandre Demers
Modified: 2013-07-03 15:21 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch to address assertion with 1 or 2 filters enabled. (1.28 KB, patch)
2013-07-01 21:11 UTC, Matthew McClure
Details | Splinter Review

Description Alexandre Demers 2013-07-01 00:06:03 UTC
Can't run glxgears, Gnome Shell or many GL test applications since commit e87fc11cac696881469a57955af2ac7b4929a2c7

postprocess: handle partial intialization failures.
Brian Paul<brianp@vmware.com>
Matthew McClure<mcclurem@vmware.com>
6/21/13 4:45 PM
glx: return True/False instead of GL_TRUE/GL_FALSE
docs: updated instructions for Mesa on Windows
origin/master (i965: NULL check depth_mt to quiet static analysis.) 
snb-magic (graw: Add struct pipe_surface forward declaration.)

Going back to previous commit (482c43a946a126a354bc30569ae8c41d3f50b06c) runs fine.

Using a Radeon HD 6950, ArchLinux 64 with latest drm and ddx gits.
Comment 1 Matthew McClure 2013-07-01 21:11:39 UTC
Created attachment 81829 [details] [review]
Patch to address assertion with 1 or 2 filters enabled.

I have a patch ready locally. Until I can update fdo, here is a patch to help.
Comment 2 Alexandre Demers 2013-07-02 16:32:04 UTC
Your patch works fine.(In reply to comment #1)
> Created attachment 81829 [details] [review] [review]
> Patch to address assertion with 1 or 2 filters enabled.
> 
> I have a patch ready locally. Until I can update fdo, here is a patch to
> help.

test and your patch works fine.
Comment 3 Brian Paul 2013-07-03 15:21:07 UTC
I'm pushing this patch.
commit 012ba47076dbc80742d4755f5c39909d0c4753f3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.